fix(comp:select): fix selector item text overflowed style singled select item should show ellipsis when text overflowd single multipled select item shouldn't shove following elements into a new line

--- a/packages/components/_private/selector/style/single.less
+++ b/packages/components/_private/selector/style/single.less
@@ -8,6 +8,7 @@
 
     &-item {
       left: @select-padding-horizontal;
+      width: calc(100% - @select-padding-horizontal - @select-icon-font-size);
     }
 
     &-item,
